gitops/telemetry-ingestion/rendered/dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: telemetry-ingestion
    app.kubernetes.io/part-of: hpdc-platform
  name: telemetry-ingestion
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: telemetry-ingestion
    app.kubernetes.io/name: pulsar-telemetry-ingestion
    app.kubernetes.io/part-of: hpdc-platform
  name: pulsar-telemetry-ingestion
  namespace: telemetry-ingestion
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: grpc
    port: 6669
    protocol: TCP
    targetPort: grpc
  - name: mqtt
    port: 1884
    protocol: TCP
    targetPort: mqtt
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  labels:
    app.kubernetes.io/component: telemetry-ingestion
    app.kubernetes.io/name: hpdc-telemetry-grpc-ingestion
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-telemetry-grpc-ingestion
  namespace: telemetry-ingestion
spec:
  hostnames:
  - '*.hpdc.local'
  parentRefs:
  - name: hpdc-edge
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - name: pulsar-telemetry-ingestion
      port: 6669
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /hpdc.telemetry.v1.TelemetryService
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.envoyproxy.io/rate-limit: '{"requestsPerUnit":100000,"unit":"second"}'
  labels:
    app.kubernetes.io/component: telemetry-ingestion
    app.kubernetes.io/name: hpdc-telemetry-http-ingestion
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-telemetry-http-ingestion
  namespace: telemetry-ingestion
spec:
  hostnames:
  - '*.hpdc.local'
  parentRefs:
  - name: hpdc-edge
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - name: pulsar-telemetry-ingestion
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /telemetry
---
apiVersion: gateway.networking.k8s.io/v1alpha1
kind: TCPRoute
metadata:
  labels:
    app.kubernetes.io/component: telemetry-ingestion
    app.kubernetes.io/name: hpdc-telemetry-mqtt-ingestion
    app.kubernetes.io/part-of: hpdc-platform
  name: hpdc-telemetry-mqtt-ingestion
  namespace: telemetry-ingestion
spec:
  parentRefs:
  - name: hpdc-edge
    namespace: envoy-gateway-system
    sectionName: mqtt
  rules:
  - backendRefs:
    - name: pulsar-telemetry-ingestion
      port: 1884
      weight: 1
